--- a/extentReport.html
+++ b/extentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 22, 2025 02:59:12 am</span></a>
+<a href="#"><span class="badge badge-primary">Jun 22, 2025 03:36:55 pm</span></a>
 </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@
           <div class="test-detail">
             <p class="name">loginWithInValidCredentials</p>
             <p class="text-sm">
-              <span>2:59:18 am</span> / <span>00:00:01:902</span>
+              <span>3:37:23 pm</span> / <span>00:00:03:498</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,9 +91,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginWithInValidCredentials</h5>
-<span class='badge badge-success'>06.22.2025 2:59:18 am</span>
-<span class='badge badge-danger'>06.22.2025 2:59:20 am</span>
-<span class='badge badge-default'>00:00:01:902</span>
+<span class='badge badge-success'>06.22.2025 3:37:23 pm</span>
+<span class='badge badge-danger'>06.22.2025 3:37:26 pm</span>
+<span class='badge badge-default'>00:00:03:498</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -106,7 +106,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:59:20 am</td>
+        <td>3:37:26 pm</td>
         <td>
           loginWithInValidCredentials PASSED
         </td>
@@ -123,7 +123,7 @@
           <div class="test-detail">
             <p class="name">loginWithValidCredentialsTest</p>
             <p class="text-sm">
-              <span>2:59:18 am</span> / <span>00:00:02:335</span>
+              <span>3:37:24 pm</span> / <span>00:00:05:487</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -132,9 +132,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginWithValidCredentialsTest</h5>
-<span class='badge badge-success'>06.22.2025 2:59:18 am</span>
-<span class='badge badge-danger'>06.22.2025 2:59:20 am</span>
-<span class='badge badge-default'>00:00:02:335</span>
+<span class='badge badge-success'>06.22.2025 3:37:24 pm</span>
+<span class='badge badge-danger'>06.22.2025 3:37:30 pm</span>
+<span class='badge badge-default'>00:00:05:487</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -147,7 +147,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:59:20 am</td>
+        <td>3:37:30 pm</td>
         <td>
           loginWithValidCredentialsTest PASSED
         </td>
@@ -164,7 +164,7 @@
           <div class="test-detail">
             <p class="name">createAnAccount</p>
             <p class="text-sm">
-              <span>2:59:18 am</span> / <span>00:00:11:355</span>
+              <span>3:37:49 pm</span> / <span>00:00:22:776</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -173,9 +173,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">createAnAccount</h5>
-<span class='badge badge-success'>06.22.2025 2:59:18 am</span>
-<span class='badge badge-danger'>06.22.2025 2:59:29 am</span>
-<span class='badge badge-default'>00:00:11:355</span>
+<span class='badge badge-success'>06.22.2025 3:37:49 pm</span>
+<span class='badge badge-danger'>06.22.2025 3:38:12 pm</span>
+<span class='badge badge-default'>00:00:22:776</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -188,7 +188,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>2:59:29 am</td>
+        <td>3:38:12 pm</td>
         <td>
           createAnAccount PASSED
         </td>
@@ -212,13 +212,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 22, 2025 02:59:12 am</h3>
+<h3>Jun 22, 2025 03:36:55 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 22, 2025 02:59:30 am</h3>
+<h3>Jun 22, 2025 03:38:13 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -288,7 +288,7 @@
 </div></div>
 <script>
 var timeline = {
-"loginWithInValidCredentials":1.902,"loginWithValidCredentialsTest":2.335,"createAnAccount":11.355
+"loginWithInValidCredentials":3.498,"loginWithValidCredentialsTest":5.487,"createAnAccount":22.776
 };
 </script>
 <div class="row">
